fix: font fallbacks, serve font locally if not, no gaps between images, images dont go offscreen for vertical screens etc

--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'CSM'; /* Choose a name for your font */
+  src: url('static/font.woff2') format('woff2'); /* Path to the font file */
+}
+
 body {
     min-height: 100vh;
     display: flex;
@@ -31,10 +36,10 @@ body::before {
     top: 0;
     left: 0;
     width: 200%;
-    height: 200%;
+    min-height: 200%;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(8, 1fr);
+    grid-auto-rows: calc((200vw / 8) / (16 / 9));
     gap: 0;
     padding: 0;
     z-index: 0;
@@ -43,7 +48,7 @@ body::before {
 
 #image-grid img {
     width: 100%;
-    aspect-ratio: 16 / 9;
+    height: 100%;
     object-fit: cover;
     filter: drop-shadow(0 0 20px rgba(0,0,0,0.8));
 }
@@ -71,14 +76,14 @@ body::before {
     position: relative;
     z-index: 2;
     color: white;
-    font-family: "Comic Sans MS", cursive;
+    font-family: "Comic Sans MS", "CSM", Arial, Helvetica, sans-serif;
     text-shadow: 4px 4px 1px #000000;
 }
 
 #startBtn {
     padding: 20px 40px;
     font-size: 2rem;
-    font-family: "Comic Sans MS", cursive;
+    font-family: "Comic Sans MS", "CSM", Arial, Helvetica, sans-serif;
     font-weight: bold;
     background: #ffbdbd;
     border: 3px solid white;
@@ -94,10 +99,10 @@ body::before {
 
 #visualizer {
     font-size: 10rem;
-    font-family: "Comic Sans MS", cursive;
+    font-family: "Comic Sans MS", "CSM", Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
-    -webkit-text-stroke: 4px white;
+    -webkit-text-stroke: 3px white;
     position: relative;
     z-index: 2;
 }
